--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     </nav>
     <main>
       <h1>Home page</h1>
+      <div>
+        First Div
+      </div>
+      <div>Second Div</div>
     </main>
   </body>
 </html>
